[tool.poetry]
name = "app-iol-sheets"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "app_iol_sheets", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
iol-sheets = {git = "https://github.com/joackob/iol-sheets.git"}

[tool.poetry.scripts]
start = "app_iol_sheets.main:main"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
